<resources>
    <string name="app_name">AndroidFall2022</string>
    <string name="hint_email">Please add your email address</string>
    <string name="hint_password">Please add your password</string>
    <string name="login">Login</string>
    <string name="email_and_password">Email and password</string>
    <string name="textview2">TextView2</string>
    <string name="textview3">TextView3</string>
    <string name="email_error">Please add your email address</string>
    <string name="password_error">Password cannot be void</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="about_android_views">About Android views</string>
    <string name="about_android">About Android</string>
    <string name="accept_t_c">Accept Terms and Conditions</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enable_back_up">Enable back-up</string>
    <string name="text_1">Text 1</string>
    <string name="text_2">Text 2</string>
    <string name="text_3">Text 3</string>
    <string name="image">Image</string>
    <string name="select_a_city">Select a city</string>
    <string name="this_is_the_first_activity">This is the first activity</string>
    <string name="open_new_activity">Open new activity</string>
    <string name="this_is_the_second_activity">This is the second activity</string>
    <string name="open_second_activity">Open second activity</string>
    <string name="dial">Dial</string>
    <string name="open_website">Open website</string>
    <string name="add_your_message">Add your message</string>
    <string name="send_message">Send message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open_navigation_activity">Open navigation activity</string>
    <string name="storage">Storage</string>
    <string name="insert_word">Insert word</string>
    <string name="invision_yesterday">InVision - Yesterday</string>
    <string name="blockchain_doesn_t_matter_here_s_why_inside_design_blog">Blockchain doesn\'t matter. Here\'s why. Inside Design Blog</string>
    <string name="color_with_special_style">Color with special style</string>
    <string name="text_with_a_new_style">Text with a new style</string>
</resources>